--- a/contacts.html
+++ b/contacts.html
@@ -90,7 +90,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <form class="p-3 p-xl-4" data-bss-recipient="d9691da1cf134125576eeb0163cb15f6"><label class="form-label">Name</label>
                             <div class="mb-3"><input class="form-control" type="text" id="name-2" name="name" placeholder="Name" style="padding-bottom: 21px;margin-bottom: -15px;margin-top: -5px;"></div><label class="form-label" style="margin-top: -10px;padding-bottom: 0px;padding-top: 19px;">Email</label>
                             <div class="mb-3"><input class="form-control" type="email" id="email-3" name="email" placeholder="Email" style="margin-top: -3px;"></div><label class="form-label">Phone Number</label>
-                            <div class="mb-3"><input class="form-control" type="email" id="email-2" name="Phone number" placeholder="Phone Number" style="margin-top: 0px;"></div><label class="form-label">Message</label>
+                            <div class="mb-3"><input class="form-control" type="text" id="phone-2" name="Phone number" placeholder="Phone Number" style="margin-top: 0px;"></div><label class="form-label">Message</label>
                             <div class="mb-3"><textarea class="form-control" id="message-2" name="message" rows="6" placeholder="Message" required=""></textarea></div>
                             <div><button class="btn btn-primary shadow d-block w-100" type="submit" style="font-family: Inter, sans-serif;">Send </button></div>
                         </form>
