Update ev.html change price to 799

--- a/ev.html
+++ b/ev.html
@@ -11,7 +11,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-WD7TFGW6');</script>
 <!-- End Google Tag Manager -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>EV Car Charger Installation Systems</title>
+    <title>EV Car Charger Installations</title>
     <meta name="" content="">
     <meta name="description" content="EV Charger Installation Systems. The Future is Electric; call us today to get started with your Car Charger Installation System. ">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -106,7 +106,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="px-2">
                         <h5 class="mb-0 mt-1" style="font-size: 37px;">Car Charger Install&nbsp;</h5>
                         <h5 class="mb-0 mt-1" style="font-size: 13px;">&nbsp;**starting at&nbsp;</h5>
-                        <h5 class="mb-0 mt-1" style="font-size: 76px;">$150</h5>
+                        <h5 class="mb-0 mt-1" style="font-size: 76px;">$799</h5>
                         <h5 class="mb-0 mt-1" style="font-size: 76px;"></h5>
                         <h5 class="mb-0 mt-1" style="font-size: 76px;background: url(&quot;assets/img/AdobeStock_567786335.jpeg&quot;) round;max-width: 480px;height: 214.1875px;background-size: auto;padding-top: 0px;margin-bottom: 6px;padding-bottom: 0px;margin-top: -49px;"></h5>
                     </div>
