Update ev.html changed terms after pricing

--- a/ev.html
+++ b/ev.html
@@ -179,7 +179,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="col">
                 <div class="d-flex p-3">
                     <div class="px-2">
-                        <h5 class="mb-0 mt-1" style="font-size: 15px;">**Additional charges will apply to connect panel to your garage, dependant on length of wire needed.</h5>
+                        <h5 class="mb-0 mt-1" style="font-size: 15px;">** Installation price does not include charging unit.<br> Subject to availability. <br> Panel must have capacity. <br> Pricing assumes a short distance from panel to charger.</h5>
                     </div>
                 </div>
             </div>
