price change esa certification included

--- a/panelupgrade.html
+++ b/panelupgrade.html
@@ -87,11 +87,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <div>
                                     <h3 class="fw-bold mb-0">Standard Panel Upgrade</h3>
                                     <p>Starting at</p>
-                                    <h4 class="display-4 fw-bold">$2199</h4>
+                                    <h4 class="display-4 fw-bold">$1650</h4>
                                 </div>
                             </div>
                             <div>
                                 <ul class="list-unstyled">
+                                    <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span>ESA Certification Included</span></li>
                                     <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span>Enhanced Electrical Safety</span></li>
                                     <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span>100amp Breakers</span></li>
                                     <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span style="font-size: 16px;">Boosted Property Value</span></li>
