Bullet list update, inclusions and exclusions added below button

--- a/panelupgrade.html
+++ b/panelupgrade.html
@@ -85,14 +85,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <div class="card-body p-4" style="min-width: 124px;height: 512.531px;">
                             <div class="d-flex justify-content-between">
                                 <div>
-                                    <h3 class="fw-bold mb-0">Standard Panel Upgrade</h3>
+                                    <h3 class="fw-bold mb-0">Panel Upgrade</h3>
                                     <p>Starting at</p>
-                                    <h4 class="display-4 fw-bold">$1650</h4>
+                                    <h4 class="display-4 fw-bold">$1649.99*</h4>
                                 </div>
                             </div>
                             <div>
                                 <ul class="list-unstyled">
-                                    <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span>ESA Certification Included</span></li>
                                     <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span>Enhanced Electrical Safety</span></li>
                                     <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span>100amp Breakers</span></li>
                                     <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span style="font-size: 16px;">Boosted Property Value</span></li>
@@ -101,7 +100,23 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     <li class="d-flex mb-2"></li>
                                     <li class="d-flex mb-2"></li>
                                 </ul>
-                            </div><a href="contacts.html"><button class="btn btn-primary d-block w-100" type="button">Get started today.</button></a>
+                            </div>
+                            <a href="contacts.html">
+                                <button class="btn btn-primary d-block w-100" type="button">
+                                    Get started today.
+                                </button>
+                            </a>
+                            <p>
+                                *Includes:<br>
+                               -ESA Certification<br>
+                                -Small Home 100A, 32 Circuit Panel<br>
+                                -10 Sngl 15A, 3 Dbl 15A, 1 Dbl 30A, 1 Dbl 40A<br>
+                                Not Included:<br>
+                                -Aluminum Wiring<br>
+                                -Relocation<br>
+                                -Drywall or other Panelling Concerns<br>
+                                Subject to Availability
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -110,13 +125,21 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <div class="card-body p-4" style="background: url(&quot;https://cdn.bootstrapstudio.io/placeholders/1400x800.png&quot;);">
                             <div class="d-flex justify-content-between">
                                 <div></div>
-                                <div><span class="badge rounded-pill bg-primary text-uppercase bg-semi-white" style="color: rgb(106,25,25);background: var(--bs-body-bg);box-shadow: 0px 0px 20px var(--bs-body-bg);">Best Value</span></div>
+                                <div>
+                                    
+                                    <span class="badge rounded-pill bg-primary text-uppercase bg-semi-white" style="color: rgb(106,25,25);background: var(--bs-body-bg);box-shadow: 0px 0px 20px var(--bs-body-bg);">Best Value</span></div>
                             </div>
                             <div>
                                 <ul class="list-unstyled">
                                     <li class="d-flex mb-2"></li>
                                     <li class="d-flex mb-2"></li>
-                                    <li class="d-flex mb-2"><span style="background: url(&quot;https://cdn.bootstrapstudio.io/placeholders/1400x800.png&quot;);color: var(--bs-emphasis-color);">Upgrade outdated electrical panels to ensure the utmost safety for your home or business. Our panel upgrade service not only replaces old components but it will increase the capacity to handle modern electrical demands. Embrace the convenience of uninterrupted power supply, even during peak usage times.</span></li>
+                                    <li class="d-flex mb-2">
+                                        <span style="background: url(&quot;https://cdn.bootstrapstudio.io/placeholders/1400x800.png&quot;);color: var(--bs-emphasis-color);">
+                                            Upgrade outdated electrical panels to ensure the utmost safety for your home or business. 
+                                            Our panel upgrade service not only replaces old components but it will increase the capacity to handle modern electrical demands. 
+                                            Embrace the convenience of uninterrupted power supply, even during peak usage times.
+                                        </span>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
