Font size change for below button

--- a/panelupgrade.html
+++ b/panelupgrade.html
@@ -106,7 +106,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     Get started today.
                                 </button>
                             </a>
-                            <p>
+                            <p style="font-size: 8px;">
                                 *Includes:<br>
                                -ESA Certification<br>
                                 -Small Home 100A, 32 Circuit Panel<br>
