--- a/panelupgrade.html
+++ b/panelupgrade.html
@@ -93,20 +93,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <div>
                                 <ul class="list-unstyled">
                                     <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span>Enhanced Electrical Safety</span></li>
-                                    <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span>100amp Breakers</span></li>
                                     <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span style="font-size: 16px;">Boosted Property Value</span></li>
                                     <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span>Seamless Power for Modern Needs</span></li>
-                                    <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span>Optimize energy distribution</span></li>
-                                    <li class="d-flex mb-2"></li>
-                                    <li class="d-flex mb-2"></li>
-                                </ul>
+                                    <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span>Optimize Energy Distribution</span></li>
+                                <ul>
                             </div>
                             <a href="contacts.html">
                                 <button class="btn btn-primary d-block w-100" type="button">
                                     Get started today.
                                 </button>
                             </a>
-                            <p style="font-size: 8px;">
+                            <p style="padding: 10px;font-size: 8px;">
                                 *Includes:<br>
                                -ESA Certification<br>
                                 -Small Home 100A, 32 Circuit Panel<br>
