font size asterisk change

--- a/panelupgrade.html
+++ b/panelupgrade.html
@@ -87,7 +87,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <div>
                                     <h3 class="fw-bold mb-0">Panel Upgrade</h3>
                                     <p>Starting at</p>
-                                    <h4 class="display-4 fw-bold">$1649.99*</h4>
+                                    <h4 class="display-4 fw-bold">$1649.99<span style="font-size: 10px;">*</span></h4>
                                 </div>
                             </div>
                             <div>
@@ -103,7 +103,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     Get started today.
                                 </button>
                             </a>
-                            <p style="padding: 10px;font-size: 8px;">
+                            <p style="padding: 10px;font-size: 9px;">
                                 *Includes:<br>
                                -ESA Certification<br>
                                 -Small Home 100A, 32 Circuit Panel<br>
