--- a/panelupgrade.html
+++ b/panelupgrade.html
@@ -87,7 +87,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <div>
                                     <h3 class="fw-bold mb-0">Panel Upgrade</h3>
                                     <p>Starting at</p>
-                                    <h4 class="display-4 fw-bold">$1649.99<span style="font-size: 10px;">*</span></h4>
+                                    <h4 class="display-4 fw-bold">$1649.99<span style="vertical-align: top; font-size: 14px;">*</span></h4>
                                 </div>
                             </div>
                             <div>
