--- a/panelupgrade.html
+++ b/panelupgrade.html
@@ -85,7 +85,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <div class="card-body p-4" style="min-width: 124px;height: 512.531px;">
                             <div class="d-flex justify-content-between">
                                 <div>
-                                    <h3 class="fw-bold mb-0">Panel Upgrade</h3>
+                                    <h3 style="font-size: 30px;"class="fw-bold mb-0">Panel Upgrade</h3>
                                     <p>Starting at</p>
                                     <h4 class="display-4 fw-bold">$1649.99<span style="vertical-align: top; font-size: 14px;">*</span></h4>
                                 </div>
