capitalization, price change sauna hot tub, breaks added in hot tub sauna header

--- a/hottubs.html
+++ b/hottubs.html
@@ -76,7 +76,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container py-4 py-xl-5">
         <div class="row mb-5">
             <div class="col-md-8 col-xl-6 text-center mx-auto">
-                <h2 style="font-size: 40.44px;">Hot Tubs, Pools &amp; Sauna Installation</h2>
+                <h2 style="font-size: 40.44px;">Hot Tubs, Pools &amp; <br>
+                    Sauna Installation</h2>
             </div>
         </div>
         <div class="carousel slide" data-bs-ride="carousel" id="carousel-1" style="height: 600px;">
@@ -87,7 +88,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <div class="col-md-6 col-xl-4 offset-md-2" style="margin-top: -196px;">
                                 <div style="max-width: 350px;">
                                     <h1 class="text-uppercase fw-bold">hot tub install</h1>
-                                    <p class="my-3" style="font-weight: bold;">Relax and unwind in style with our flawless hot tub installation services, bringing ultimate indulgence to your home.</p>
+                                    <p class="my-3" style="font-weight: bold;">Relax and Unwind in Style with our Flawless Hot Tub Installation Services, Bringing Ultimate Indulgence to Your Home.</p>
                                     <p class="my-3" style="background: rgba(255,255,255,0.5);color: var(--bs-blue);font-weight: bold;font-size: 25px;"></p>
                                 </div>
                             </div>
@@ -100,7 +101,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <div class="col-md-6 col-xl-4 offset-md-2">
                                 <div style="max-width: 350px;margin-top: -237px;">
                                     <h1 class="text-uppercase fw-bold">pool installations</h1>
-                                    <p class="my-3" style="font-weight: bold;">Dive into luxury with our seamless pool installations, turning your backyard into a stunning aquatic oasis.</p>
+                                    <p class="my-3" style="font-weight: bold;">Dive into Luxury with our Seamless Pool Installations, Turning Your Backyard Into a Stunning Aquatic Oasis.</p>
                                 </div>
                             </div>
                         </div>
@@ -118,7 +119,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <div class="col-md-6 col-xl-4 offset-md-2">
                             <div style="max-width: 350px;">
                                 <h1 class="text-uppercase fw-bold">sauna installations</h1>
-                                <p class="my-3" style="font-weight: bold;">Indulge in bliss with our expert sauna installations.</p>
+                                <p class="my-3" style="font-weight: bold;">Indulge in Bliss with our Expert Sauna Installations.</p>
                             </div>
                         </div>
                     </div>
@@ -130,7 +131,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3">
             <div class="col">
                 <div class="p-4">
-                    <h4 style="text-align: center;">Full electrical wiring and safety compliance checks</h4>
+                    <h4 style="text-align: center;">Full Electrical Wiring and Safety Compliance Checks</h4>
                     <div class="d-flex">
                         <div></div>
                     </div>
@@ -138,7 +139,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
             <div class="col">
                 <div class="p-4">
-                    <h4 style="text-align: center;">Expert setup for a flawless aquatic experience</h4>
+                    <h4 style="text-align: center;">Expert Setup For a Flawless Aquatic Experience</h4>
                     <div class="d-flex">
                         <div></div>
                     </div>
@@ -170,13 +171,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <ul class="list-unstyled" style="color: rgb(32,102,208);">
                                 <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon me-2"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-check-lg">
                                             <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z"></path>
-                                        </svg></span><span style="color: rgb(32,102,208);">Comprehensive filtration system installation.</span></li>
+                                        </svg></span><span style="color: rgb(32,102,208);">Comprehensive Filtration System Installation.</span></li>
                                 <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon me-2"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-check-lg">
                                             <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z"></path>
-                                        </svg></span><span>Professional electrical wiring.</span></li>
+                                        </svg></span><span>Professional Electrical Wiring.</span></li>
                                 <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon me-2"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-check-lg">
                                             <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z"></path>
-                                        </svg></span><span>Ensured safety and compliance standards.</span></li>
+                                        </svg></span><span>Ensured Safety and Compliance Standards.</span></li>
                             </ul>
                         </div><a href="contacts.html"><a class="btn btn-primary d-block w-100" role="button" href="#">Get Started</a></a>
                     </div>
@@ -187,20 +188,21 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="card-body p-4">
                         <div class="d-flex justify-content-between">
                             <div>
-                                <h3 class="fw-bold text-white mb-0">Hot Tub &amp; Sauna Installations</h3>
+                                <h3 class="fw-bold text-white mb-0">Hot Tub &amp;<br>
+                                    Sauna Installations</h3>
                                 <p></p>
                                 <h4 class="display-6 fw-bold text-white" style="height: 39px;font-size: 21px;"></h4>
-                                <h4 class="display-6 fw-bold text-white" style="margin-top: -31px;margin-left: 16px;padding-top: 0px;padding-bottom: 0px;margin-bottom: 0px;">&nbsp;$2,299 </h4><i class="la la-star" style="font-size: 11px;margin-top: -12px;"></i><span style="font-size: 10px;padding-top: 10px;margin-top: -4px;margin-bottom: -21px;">Starting at</span>
+                                <h4 class="display-6 fw-bold text-white" style="margin-top: -31px;margin-left: 16px;padding-top: 0px;padding-bottom: 0px;margin-bottom: 0px;">&nbsp;$399 </h4><i class="la la-star" style="font-size: 11px;margin-top: -12px;"></i><span style="font-size: 10px;padding-top: 10px;margin-top: -4px;margin-bottom: -21px;">Starting at</span>
                             </div>
                             <div><span class="badge rounded-pill bg-primary text-uppercase bg-white-300">Best Value</span></div>
                         </div>
                         <div>
                             <ul class="list-unstyled">
-                                <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-semi-white bs-icon me-2 xs" style="margin-top: 17px;"><i class="la la-star" style="margin-bottom: 7px;margin-top: 6px;"></i></span><span style="margin-top: 14px;">Includes installation of a 40 amp system.</span></li>
-                                <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-semi-white bs-icon me-2 xs" style="margin-top: 17px;"><i class="la la-star" style="margin-bottom: 7px;margin-top: 6px;"></i></span><span style="margin-top: 14px;">Professional installation and setup.</span></li>
-                                <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-semi-white bs-icon me-2 xs" style="margin-top: 17px;"><i class="la la-star" style="margin-bottom: 7px;margin-top: 6px;"></i></span><span style="margin-top: 11px;">Thorough safety inspection for worry-free enjoyment.</span></li>
+                                <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-semi-white bs-icon me-2 xs" style="margin-top: 17px;"><i class="la la-star" style="margin-bottom: 7px;margin-top: 6px;"></i></span><span style="margin-top: 14px;">Includes Installation of a 40A system.</span></li>
+                                <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-semi-white bs-icon me-2 xs" style="margin-top: 17px;"><i class="la la-star" style="margin-bottom: 7px;margin-top: 6px;"></i></span><span style="margin-top: 14px;">Professional Installation and Setup.</span></li>
+                                <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-semi-white bs-icon me-2 xs" style="margin-top: 17px;"><i class="la la-star" style="margin-bottom: 7px;margin-top: 6px;"></i></span><span style="margin-top: 11px;">Thorough Safety Inspection for Worry-Free Enjoyment.</span></li>
                                 <li class="d-flex mb-2"></li>
-                                <li class="d-flex mb-2" style="padding-bottom: 0px;margin-bottom: 14px;margin-top: 0px;"><span class="bs-icon-xs bs-icon-rounded bs-icon-semi-white bs-icon me-2 xs" style="margin-top: 17px;"><i class="la la-star" style="margin-bottom: 7px;margin-top: 6px;"></i></span><span style="margin-top: 14px;">Efficient and timely service.</span></li>
+                                <li class="d-flex mb-2" style="padding-bottom: 0px;margin-bottom: 14px;margin-top: 0px;"><span class="bs-icon-xs bs-icon-rounded bs-icon-semi-white bs-icon me-2 xs" style="margin-top: 17px;"><i class="la la-star" style="margin-bottom: 7px;margin-top: 6px;"></i></span><span style="margin-top: 14px;">Efficient and Timely Service.</span></li>
                             </ul>
                         </div><a href="contacts.html"><a class="btn btn-primary d-block w-100 bg-white-300" role="button" href="contacts.html">Learn More</a></a>
                     </div>
