--- a/hottubs.html
+++ b/hottubs.html
@@ -188,8 +188,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="card-body p-4">
                         <div class="d-flex justify-content-between">
                             <div>
-                                <h3 class="fw-bold text-white mb-0">Hot Tub &amp;<br>
-                                    Sauna Installations</h3>
+                                <h3 class="fw-bold text-white mb-0">Hot Tub &amp;<br>Sauna Installations</h3>
                                 <p></p>
                                 <h4 class="display-6 fw-bold text-white" style="height: 39px;font-size: 21px;"></h4>
                                 <h4 class="display-6 fw-bold text-white" style="margin-top: -31px;margin-left: 16px;padding-top: 0px;padding-bottom: 0px;margin-bottom: 0px;">&nbsp;$399 </h4><i class="la la-star" style="font-size: 11px;margin-top: -12px;"></i><span style="font-size: 10px;padding-top: 10px;margin-top: -4px;margin-bottom: -21px;">Starting at</span>
