capitalization, text edits

--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
             </div>
             <div class="text-white p-4 p-md-5" style="padding-left: 0px;margin-left: -8px;">
-                <h2 class="fw-bold text-white mb-3">We can take care of 100% of your electrical needs.</h2>
-                <p class="mb-4">With over 15 years of experience, from a small repair to a large custom installation, we've done it all! We'd be happy to solve all fo your electrical needs for your home and/or for your business.</p>
+                <h2 class="fw-bold text-white mb-3">Complete Care For All Your Electrical Needs.</h2>
+                <p class="mb-4">With Over 15 Years of Experience, From a Small Repair to a Large Custom Installation, We've Done it All! We'd be Happy to Solve all of Your Electrical Needs for Your Home and Your Business.</p>
             </div>
             <div class="py-5 p-lg-5" style="font-family: Inter, sans-serif;padding-bottom: 26px;margin-bottom: -49px;margin-top: -44px;">
                 <div class="row row-cols-1 row-cols-md-2 mx-auto" style="max-width: 900px;">
@@ -311,8 +311,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 </div>
                                 <p style="padding-bottom: 0px;margin-top: -81px;"></p>
                             </div>
-                            <p>Introducing Leonard Electric, where we power up your home or business with reliable solutions that keep your property safe and efficient. From installation to repair, to customizable options, we are dedicated to providing exceptional customer service that exceeds your expectations.</p>
-                            <p style="margin-top: -18px;padding-top: 6px;">Choose Leonard Electric. Turning Power into Perfection.</p>
+                            <p>Introducing Leonard Electric, where we power Up your home or business with reliable solutions that keep your property safe and efficient. From installation to repair, to customizable options, we are dedicated to providing exceptional customer service that exceeds your expectations.</p>
+                            <p style="margin-top: -18px;padding-top: 6px;">Choose Leonard Electric.<br>Turning Power into Perfection.</p>
                         </div>
                     </div>
                 </div>
