--- a/services.html
+++ b/services.html
@@ -237,7 +237,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <div class="col-12">
                             <p class="product-description">Our proficient electricians are here to ensure whole home surge protection, ensuring a seamless flow of electricity throughout your property and providing power connections for all your devices and appliances.</p>
                             <div class="row">
-                                <div class="col-6"><a href="surgeprotectors.html"><button class="btn btn-light" type="button">Learn More</button></a></div>
+                                <div class="col-6"><a href="surgeprotector.html"><button class="btn btn-light" type="button">Learn More</button></a></div>
                             </div>
                         </div>
                     </div>
