--- a/surgeprotector.html
+++ b/surgeprotector.html
@@ -75,13 +75,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container py-5">
             <div class="row mb-5">
                 <div class="col-md-8 col-xl-6 text-center mx-auto">
-                    <h3 class="fw-bold" style="font-family: Inter, sans-serif;font-size: 56px;">Surge Protection</h3>
+                    <h3 class="fw-bold" style="font-family: Inter, sans-serif;font-size: 56px;">Whole Home Surge Protection</h3>
                     <p class="text-muted"> Our Proficient Electricians are Here to Ensure Whole Home Surge Protection.<br>
                     Many homeowners are unaware that small, everyday power surges degrade appliances over time. With Surge Protection you can protect your applicances, devices and all your technology while enjoying a seamless flow of electricity throughout your property.<br>
                     With the ever increasing use of Smart Home technology, surge protection becomes increasingly vital as smart home systems rely on uniterrupted power, and surges can cause system-wide failure. Whole home surge protectors also protect you from high costs associated with replacing electronics damaged by surges, which are rarely covered by insurance.</p>
                 </div>
             </div>
-            <div class="row g-0 row-cols-1 row-cols-md-2 row-cols-xl-3 d-flex align-items-md-center align-items-xl-center" style="background: url(&quot;assets/img/AdobeStock_522795163.jpeg&quot;);height: 879.531px;background-size: cover;">
+            <div class="row g-0 row-cols-1 row-cols-md-2 row-cols-xl-3 d-flex align-items-md-center align-items-xl-center" style="background: url(&quot;assets/img/AdobeStock_392762194.jpeg&quot;);height: 879.531px;background-size: cover;">
                 <div class="col offset-xl-2 mb-4">
                     <div class="card bg-dark border-dark">
                         <div class="card-body p-4" style="min-width: 124px;height: 512.531px;">
