font size change

--- a/surgeprotector.html
+++ b/surgeprotector.html
@@ -76,9 +76,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="row mb-5">
                 <div class="col-md-8 col-xl-6 text-center mx-auto">
                     <h3 class="fw-bold" style="font-family: Inter, sans-serif;font-size: 56px;">Whole Home Surge Protection</h3>
-                    <p class="text-muted"> Our Proficient Electricians are Here to Ensure Whole Home Surge Protection.<br>
-                    Many homeowners are unaware that small, everyday power surges degrade appliances over time. With Surge Protection you can protect your applicances, devices and all your technology while enjoying a seamless flow of electricity throughout your property.<br>
-                    With the ever increasing use of Smart Home technology, surge protection becomes increasingly vital as smart home systems rely on uniterrupted power, and surges can cause system-wide failure. Whole home surge protectors also protect you from high costs associated with replacing electronics damaged by surges, which are rarely covered by insurance.</p>
+                    <p class="text-muted"> With Surge Protection you can protect your applicances, devices and all your technology while enjoying a seamless flow of electricity throughout your property.<br>
+                    Whole home surge protectors also protect you from high costs associated with replacing electronics damaged by surges, which are rarely covered by insurance.</p>
                 </div>
             </div>
             <div class="row g-0 row-cols-1 row-cols-md-2 row-cols-xl-3 d-flex align-items-md-center align-items-xl-center" style="background: url(&quot;assets/img/AdobeStock_392762194.jpeg&quot;);height: 879.531px;background-size: cover;">
@@ -87,15 +86,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <div class="card-body p-4" style="min-width: 124px;height: 512.531px;">
                             <div class="d-flex justify-content-between">
                                 <div>
-                                    <h3 style="font-size: 40px;"class="fw-bold mb-0">Surge Protection</h3>
+                                    <h3 style="font-size: 40px;"class="fw-bold mb-0">Whole Home Surge Protection</h3>
                                     <p>Starting at</p>
                                     <h4 class="display-4 fw-bold">$549<span style="vertical-align: top; font-size: 14px;">*</span></h4>
                                 </div>
                             </div>
                             <div>
-                                <ul class="list-unstyled">
-                                    <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span>Protect Your Sensitive Electronic Equipment from Lightning Strikes. More Extreme Weather Leads to More Electrical Disruption.Prepare Your Home Against Rising Risks. </span></li>
-                                    <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span style="font-size: 16px;">Protection Up to $75,000 Worth of your Valuable Equipment with a Five-Year Warranty.</span></li>
+                                <ul style="font-size: 12px;" class="list-unstyled">
+                                    <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span class="font-size: 12px;"><span>Protect Your Sensitive Electronic Equipment from Lightning Strikes. More Extreme Weather Leads to More Electrical Disruption.Prepare Your Home Against Rising Risks. </span></li>
+                                    <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span style="font-size: 12px;">Protection Up to $75,000 Worth of your Valuable Equipment with a Five-Year Warranty.</span></li>
                                     <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span>Whole Home Surge Protectors Are a One-Time Investment for Long-Term Savings.</span></li>
                                     <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span>Ultimate Safegaurd- Because Your Technology Deserves it!</span></li>
                                     <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon bs-icon-xs me-2"></span><span>A Single Whole-Home Surge Protector Protects ALL Devices Connected to the Home's Electrical System. </span></li>                                <ul>
@@ -104,8 +103,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <button class="btn btn-primary d-block w-100" type="button">
                                     Get started today.
                                 </button>
-                            </a>
-                          
+                            </a>                          
                             </p>
                         </div>
                     </div>
